EPBDS-16356 Improve permission checks for mapped content paths (#1961)